fix(ci): add jvm params